<?xml version="1.0"?>
<package format="2">
  <name>ld08_driver</name>
  <version>1.0.0</version>
  <description>
    ROS package for LD08 Lidar.
  </description>
  <license>Apache 2.0</license>
  <author>LD Robot</author>
  <author>Weyne</author>
  <author email="willson@robotis.com">Will Son</author>
  <maintainer email="willson@robotis.com">Will Son</maintainer>
  <url type="website">http://wiki.ros.org/ld08_driver</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/ld08_driver</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/ld08_driver/issues</url>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>boost</depend>
</package>
